--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,13 +66,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:hint="Email Address"
         app:boxCornerRadiusBottomEnd="16sp"
         app:boxCornerRadiusBottomStart="16sp"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
-
         app:errorIconDrawable="@drawable/ic_error"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TI_UserName_Register"
@@ -95,6 +95,7 @@
         android:layout_marginEnd="20dp"
         android:hint="Password"
         app:boxCornerRadiusBottomEnd="16sp"
+        android:layout_marginTop="5dp"
         app:boxCornerRadiusBottomStart="16sp"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
@@ -123,6 +124,7 @@
         android:hint="Confirm Password"
         app:boxCornerRadiusBottomEnd="16sp"
         app:boxCornerRadiusBottomStart="16sp"
+        android:layout_marginTop="5dp"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
         app:endIconMode="password_toggle"
@@ -174,9 +176,9 @@
         android:id="@+id/bt_Register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10sp"
+        android:layout_marginEnd="20dp"
         android:background="@color/orange_main"
         android:fontFamily="@font/poppins_regular"
         android:text="Register"
@@ -195,25 +197,25 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal|top"
-        android:fontFamily="@font/poppins_regular"
+        app:layout_constraintTop_toBottomOf="@+id/bt_Register">
 
-        android:text="Already Have Account?" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="center_horizontal|top"
 
-    <TextView
+            android:text="Already Have Account?" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:gravity="center_horizontal|top"
             android:fontFamily="@font/poppins_regular"
+            android:gravity="center_horizontal|top"
             android:text=" Log In"
             android:textColor="@color/orange_main"
             android:textStyle="bold"
