--- a/app/src/main/res/layout/activity_text_recognation.xml
+++ b/app/src/main/res/layout/activity_text_recognation.xml
@@ -37,10 +37,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_pdf_OCR"
+        android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ll_buttons_OCR"
         android:layout_below="@+id/ll_bar_OCR"
+        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
@@ -60,6 +62,7 @@
         <carbon.widget.Button
             android:id="@+id/bt_SavePDFTOFirebase_OCR"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
