--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hti.Grad_Project.Activities.RegisterActivity">
+    tools:context="com.hti.Grad_Project.Activities.Auth.RegisterActivity">
 
     <TextView
         android:id="@+id/tv1_Register"
