--- a/app/src/main/res/layout/activity_my_saved_book.xml
+++ b/app/src/main/res/layout/activity_my_saved_book.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/RL_ActivityMySavedBook"
     android:orientation="vertical"
+    android:background="?attr/colorOnPrimary"
     tools:context=".Activities.MyBooks_Activity">
 
     <RelativeLayout
