--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,6 +10,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
         <item name="colorOnSecondary">#727272</item>
+        <item name="colorOnPrimary">#121212</item>
 
 
     </style>
