QuestionActivity Done AnswerActivity Done Category.kt Done Home Done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="secondary">#BABABA</color>
     <color name="green">#1ED760</color>
 
+    <color name="LightGray">#A9A9A9</color>
+
 </resources>
