--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorOnPrimary"
+    android:gravity="center"
     tools:context="com.hti.Grad_Project.Activities.Auth.Splash">
 
     <carbon.widget.ImageView
@@ -12,18 +14,19 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/main_logo" />
+
     <TextView
         android:id="@+id/tv1_Splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/MainLogo_Splash"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        android:gravity="center"
         android:fontFamily="@font/poppins_regular"
-        android:text="Convert your Book \n into machine"
-        />
+        android:gravity="center"
+        android:text="Convert your Book into machine"
+        android:textColor="?attr/colorSecondary"
+        android:textStyle="bold"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv2_Splash"
