OnboardingActivity.kt Done

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorSecondary">@color/white</item>
         <item name="colorOnSecondary">#727272</item>
         <item name="colorOnPrimary">#121212</item>
+        <item name="colorOnPrimarySurface">#fff</item>
 
 
     </style>
