Text Speech Done Loading and error in pdf list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="orange_second">#FFD788</color>
     <color name="secondary">#BABABA</color>
     <color name="green">#1ED760</color>
+    <color name="golden">#FFD700</color>
 
 
     <color name="LightGray">#A9A9A9</color>
@@ -22,5 +23,7 @@
     <color name="md_grey_100">#F5F5F5</color>
     <color name="md_white_1000">#ffffff</color>
     <color name="md_deep_orange_300">#FF8A65</color>
+
+
 
 </resources>
