--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -50,6 +50,9 @@
         app:boxCornerRadiusTopStart="16sp"
         app:errorIconDrawable="@drawable/ic_error"
         app:layout_constraintStart_toStartOf="parent"
+        app:boxStrokeColor="@color/LightGray"
+        android:textColorHint="@color/LightGray"
+        app:startIconTint="@color/LightGray"
         app:layout_constraintTop_toBottomOf="@id/tv2_Register"
         app:startIconDrawable="@drawable/icon_email">
 
@@ -72,6 +75,9 @@
         android:hint="Email Address"
         app:boxCornerRadiusBottomEnd="16sp"
         app:boxCornerRadiusBottomStart="16sp"
+        app:boxStrokeColor="@color/LightGray"
+        android:textColorHint="@color/LightGray"
+        app:startIconTint="@color/LightGray"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
         app:errorIconDrawable="@drawable/ic_error"
@@ -93,16 +99,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:hint="Password"
         app:boxCornerRadiusBottomEnd="16sp"
-        android:layout_marginTop="5dp"
         app:boxCornerRadiusBottomStart="16sp"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
         app:endIconMode="password_toggle"
         app:errorIconDrawable="@drawable/ic_error"
         app:layout_constraintEnd_toEndOf="parent"
+        app:boxStrokeColor="@color/LightGray"
+        android:textColorHint="@color/LightGray"
+        app:startIconTint="@color/LightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TI_Email_Register"
         app:startIconDrawable="@drawable/icon_password">
@@ -121,17 +130,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:hint="Confirm Password"
         app:boxCornerRadiusBottomEnd="16sp"
         app:boxCornerRadiusBottomStart="16sp"
-        android:layout_marginTop="5dp"
         app:boxCornerRadiusTopEnd="16sp"
         app:boxCornerRadiusTopStart="16sp"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/secondary"
         app:errorIconDrawable="@drawable/ic_error"
         app:layout_constraintEnd_toEndOf="parent"
+        app:boxStrokeColor="@color/LightGray"
+        android:textColorHint="@color/LightGray"
+        app:startIconTint="@color/LightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TI_Pass_Register"
         app:startIconDrawable="@drawable/icon_password">
@@ -178,6 +190,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/LightGray"
             android:fontFamily="@font/poppins_regular"
             android:gravity="center_horizontal|top"
 
