--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GradProject" parent="Theme.MaterialComponents.NoActionBar.Bridge">
+    <style name="Theme.GradProject" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/orange_main</item>
         <item name="colorPrimaryDark">@color/orange_main</item>
@@ -13,8 +13,9 @@
         <item name="colorOnPrimary">#121212</item>
         <item name="colorOnPrimarySurface">#fff</item>
 
-
     </style>
+
+
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxBackgroundColor">?attr/colorOnSecondary</item>
